--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ RPC_URL="https://rpc-amoy.polygon.technology/"
 # key in hex format with matic balance
 WALLET_KEY="" 
 # MongoDB connection string, uses in memory Mongo server if not specified
-MONGO_DB_CONNECTION="mongodb+srv://cloudadmin:32Sajy5BsOzCKy37@bbncluster1.jmyvtm5.mongodb.net/test3?retryWrites=true&w=majority"
+MONGO_DB_CONNECTION=""
 # third part yurl to polygon amoy network rpc node
 THIRD_PARTY_RPC_URL="https://bbnrpc.hyderabad.bharatblockchain.io" 
 # third party contract address in the linea test network
